# orchstrych

./: Cargo.toml  README.md  config.toml  project-specifics.md
crates/orch-cli/: Cargo.toml
crates/orch-cli/src/: main.rs
crates/orch-core/: Cargo.toml
crates/orch-core/src/: agent.rs  edge.rs  error.rs  lib.rs
crates/orch-db/: Cargo.toml
crates/orch-db/src/: lib.rs  store.rs
crates/orch-engine/: Cargo.toml
crates/orch-engine/src/: lib.rs  pipeline.rs  scheduler.rs  task.rs
crates/orch-llm/: Cargo.toml
crates/orch-llm/src/: client.rs  error.rs  grammar.rs  lib.rs
crates/orch-tools/: Cargo.toml
crates/orch-tools/src/: error.rs  lib.rs  runner.rs
src/: main.rs
