[workspace]
members = [
    "crates/orch-core",
    "crates/orch-db",
    "crates/orch-engine",
    "crates/orch-llm",
    "crates/orch-tools",
    "crates/orch-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["westerngazoo"]

[workspace.dependencies]
# Geometric algebra — the only math layer
garust = { path = "../garust" }

# Graph engine from a-million-plateus — domain-agnostic GeoGraph<N, E>
mp-graph = { path = "../a-million-plateus/crates/mp-graph" }

# Internal crates
orch-core = { path = "crates/orch-core" }
orch-db = { path = "crates/orch-db" }
orch-engine = { path = "crates/orch-engine" }
orch-llm = { path = "crates/orch-llm" }
orch-tools = { path = "crates/orch-tools" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
postcard = { version = "1", features = ["alloc"] }

# Data structures
uuid = { version = "1", features = ["v4", "serde"] }
petgraph = "0.7"

# Persistence
redb = "4.1"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client (for LLM backends)
reqwest = { version = "0.12", features = ["json"] }

# Async traits
async-trait = "0.1"

# Config
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
