[package]
name = "orch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orchstrych"
path = "src/main.rs"

[dependencies]
orch-core = { workspace = true }
orch-db = { workspace = true }
orch-engine = { workspace = true }
orch-llm = { workspace = true }
orch-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
