[package]
name = "orch-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mp-graph = { workspace = true }
garust = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
