[package]
name = "orch-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orch-core = { workspace = true }
mp-graph = { workspace = true }
redb = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
